--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,8 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-wagtail = "<2.8,>=2.7"
-Django = ">=2.2,<2.3"
+wagtail = "==2.8"
+Django = "==2.2.10"
 django-extensions = "==2.2.1"
 django-widget-tweaks = "==1.4.5"
 sentry-sdk = "==0.13.5"
